# TreeOfLife

./: .gitmodules  CMakeLists.txt
qt-src/: CMakeLists.txt  main.cpp
wx-src/: CMakeLists.txt  TreeOfLife.project
wx-src/src/: main.cpp  mainframe.cpp  mainframe.h  node.h
wx-src/src/panel/: feature.cpp  feature.h
wx-src/src/plot/: plot.cpp  plot.h
wx-src/src/res/: res.rc
